// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/kanban/calculations/KanbanCalculationOptions > base case 1`] = `
<div>
  <span
    class="mocked mocked"
  />
</div>
`;

exports[`components/kanban/calculations/KanbanCalculationOptions > with menu open 1`] = `
<div
  aria-hidden="true"
>
  <span
    class="mocked mocked"
  />
</div>
`;

exports[`components/kanban/calculations/KanbanCalculationOptions > with submenu open 1`] = `
<div
  aria-hidden="true"
>
  <span
    class="mocked mocked"
  />
</div>
`;
